# retrAI

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  agents.md  cliff.toml  mkdocs.yml  pyproject.toml  test.db
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  architecture.md  cli.md  examples.md  goals.md  how-it-works.md  index.md  non-coding-goals.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: extra.css
examples/: .gitignore  README.md
examples/01_sql_duckdb/: .retrai.yml  README.md  query.sql  seed.py
examples/02_pytest_fix/: README.md  pyproject.toml  utils.py
examples/03_ml_churn/: .retrai.yml  README.md  generate_data.py
examples/04_perf_optimize/: .retrai.yml  README.md  bench.py
examples/05_pyright_typing/: README.md  processing.py  pyrightconfig.json
examples/06_shell_linter/: .retrai.yml  README.md  messy.py
examples/07_cancer_research/: .retrai.yml
examples/07_text_improve/: .retrai.yml
examples/08_creative/: .retrai.yml
examples/08_rust_optimize/: .retrai.yml
examples/09_score/: .retrai.yml
frontend/: package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.vue  style.css
retrai/: __init__.py  benchmark.py  checkpoint.py  config.py  history.py  review.py  watcher.py
retrai/agent/: graph.py  personas.py  routers.py  state.py
retrai/cli/: app.py  commands.py  runners.py
retrai/events/: types.py
retrai/experiment/: __init__.py  tracker.py
retrai/goals/: api_test_goal.py  cancer_research_goal.py  creative_goal.py  detector.py  docker_goal.py  lint_goal.py  migration_goal.py  ml_goal.py  registry.py  research_goal.py  rust_optimize_goal.py  score_goal.py  solver.py  sql_goal.py  text_improve_goal.py
retrai/llm/: factory.py
retrai/memory/: extractor.py  store.py
retrai/pipeline/: __init__.py
retrai/providers/: copilot_auth.py
retrai/safety/: __init__.py  guardrails.py
retrai/server/: run_manager.py
retrai/swarm/: __init__.py  decomposer.py  orchestrator.py  roles.py  types.py  worker.py
retrai/tools/: __init__.py  base.py  benchmark_compare.py  bio_search.py  builtins.py  complexity.py  data_analysis.py  dataset_fetch.py  dependency_graph.py  file_delete.py  file_insert.py  file_patch.py  file_read.py  file_rename.py  file_write.py  find_files.py  git_diff.py  grep_search.py  hypothesis_test.py  js_exec.py  memory_profile.py  ml_train.py  optimize.py  profiler.py  python_exec.py  rust_bench.py  sql_bench.py  visualize.py  web_search.py
retrai/tui/: __init__.py  app.py  screens.py  setup_graph.py  styles.tcss  widgets.py  wizard.py
tests/unit/: test_agent_state.py  (+44 more)
(+23 files in other folders)
